--- a/configs/trainers/da/shot/office_caltech.yaml
+++ b/configs/trainers/da/shot/office_caltech.yaml
@@ -14,6 +14,10 @@ OPTIM:
   STAGED_LR: True
   NEW_LAYERS: ('head', 'classifier')
 
+TRAINER:
+  SHOT:
+    PAR: 0.3
+
 MODEL:
   BACKBONE:
     NAME: 'resnet101'
@@ -21,11 +25,12 @@ MODEL:
     NAME: 'mlp'
     HIDDEN_LAYERS: [256]
     DROPOUT: 0.5
-
+  CLASSIFIER:
+    TYPE: 'weight'
+    
 TRAIN:
   PRINT_FREQ: 2
 
 TEST:
   SPLIT: 'test'
-  NO_TEST: False
-  
+  NO_TEST: True
